@startuml lsm_03_compaction
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam roundCorner 8
skinparam shadowing false

class CompactionScheduler {
  + CompactionScheduler(strategy, levels,\n  thread_pool, path_generator)
  + schedule() : void
  - run_compaction(job: CompactionJob) : void
  - strategy_ : unique_ptr<ICompactionStrategy>
  - levels_ : shared_ptr<LevelManager>
  - thread_pool_ : shared_ptr<ThreadPool>
  - path_generator_ : function<string()>
}

interface ICompactionStrategy {
  + pick_job(levels: LevelManager) : CompactionJob
  + score(level: int, levels: LevelManager) : double
}

class LeveledCompaction {
  + pick_job(levels: LevelManager) : CompactionJob
  + score(level: int, levels: LevelManager) : double
  - base_bytes_ : size_t
  - multiplier_ : int
}

note right of LeveledCompaction
  score = total_size /
  (base_bytes * multiplier^level)
  Compactează dacă score > 1.0
end note

class TieredCompaction {
  + pick_job(levels: LevelManager) : CompactionJob
  + score(level: int, levels: LevelManager) : double
  - size_ratio_ : int
}

note right of TieredCompaction
  score = num_files / size_ratio
  Compactează dacă num_files >= size_ratio
end note

struct CompactionJob {
  + inputs : vector<shared_ptr<SSTable>>
  + output_level : int
  + output_path : string
}

class ThreadPool {
  + submit(task: function<void()>) : void
  + shutdown() : void
  - workers_ : vector<jthread>
  - tasks_ : deque<function<void()>>
  - queue_mutex_ : mutex
  - condition_ : condition_variable
  - stop_ : atomic<bool>
}

CompactionScheduler *-- ThreadPool
CompactionScheduler ..> ICompactionStrategy : uses
CompactionScheduler ..> CompactionJob : creates
LeveledCompaction ..|> ICompactionStrategy
TieredCompaction  ..|> ICompactionStrategy

@enduml